<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizzapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical">


        <TextView
            android:id="@+id/dummy_view_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RelativeLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingBottom="24dp"
                android:paddingTop="24dp"
                android:text="@string/greetings"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size"  />

            <ImageView
                android:id="@+id/question_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/placeholder"
                android:visibility="gone" />

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_image"
                android:hint="@string/name_hint"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

            </EditText>

            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_field"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:onClick="button_1_action"
                android:text="@string/start_quiz" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_1"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:onClick="button_2_action"
                android:text="Button2"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:onClick="button_3_action"
                android:text="Button3"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/summary_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/explanation_question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/explanation_1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size"  />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/question_1" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/explanation_question_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/explanation_2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size"  />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/question_2" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/explanation_question_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/explanation_3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size"  />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/question_3" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/explanation_question_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/explanation_4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size"  />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/font_size"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/answer_question_4" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/explanation_question_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/explanation_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/font_size"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/answer_question_5" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
